deployments/3-oci-oke/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-app-service
  labels:
    app: fibonacci-app
    version: v2025.09.10
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fibonacci-app
